<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--
    Remove this file.
    It is here to declare all necessary ID of UI elements for tests to compile,
    and all those IDs should be used in your own views and your own implementation
    of the app UI.
    -->

    <!-- MainActivity -->

    <TextureView
        android:id="@+id/txt_expenses_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextureView
        android:id="@+id/txt_expenses_avr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextureView
        android:id="@+id/tbl_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




    <!-- DataEntry -->

    <TextureView
        android:id="@+id/dataentry_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextureView
        android:id="@+id/edit_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextureView
        android:id="@+id/edit_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextureView
        android:id="@+id/edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextureView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextureView
        android:id="@+id/btn_add_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextureView
        android:id="@+id/txt_add_expenses_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.appcompat.widget.LinearLayoutCompat>